Add shared OccupancyModel, OccupancySimulator, and staff dashboard integration
Co-authored-by: vmindy <191557640+vmindy@users.noreply.github.com>